--- a/public/styles.css
+++ b/public/styles.css
@@ -16,8 +16,9 @@
     color: var(--mainWhite);
   }
 
+
   .body{
-    background-color: #262626;
+    background: url("https://scontent.ftuc1-2.fna.fbcdn.net/v/t1.0-9/79806531_447653599515011_8799063533259063296_n.jpg?_nc_cat=111&_nc_oc=AQktkuJ0JnN70UzZbbxUgxZCRJYpnQ6XS_AixqAD7rto2Exz7ZcE5mdEf6j5BeKiY2Q&_nc_ht=scontent.ftuc1-2.fna&oh=e66c5a615f62242df4e468d296298f57&oe=5E7C9952");
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     line-height: 1.4;
   }
@@ -72,7 +73,7 @@
     letter-spacing: var(--mainSpacing);
   }
 
-  .nav-links a:hover {
+  .nav-links a:hover, .nav-links a:active{
     color: var(--mainRed);
   }
   
@@ -175,35 +176,94 @@
     margin-top: 450px;
   }
   
+  .title{
+    font-family: Source Sans Pro;
+    font-weight: 700;
+    color: white;
+    letter-spacing: 8px;
+    font-size: 40px;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .EventoDiv{
+    display: flex;
+    justify-content: center;
+  }
+
+  .EventoDiv a{
+    margin-right: 20px;
+    margin-top: 25px;
+    font-family: Source Sans Pro;
+    font-weight: 400;
+    font-size: 30px;
+    box-shadow: 0 3px 3px 0.9px rgba(0, 0, 0, 0.2);
+    /* ANIMACIÓN */
+    background-image: linear-gradient(to bottom, var(--mainBlack)50%, #7F3334 50%);
+    transition: background-position 1s;
+    background-size: 100% 200%;
+    color: var(--mainWhite);
+  }
+
+  .EventoDiv a:hover, .EventoDiv a:active{
+    cursor: pointer;
+    background-position: 0 -100%;
+  }
+
+
   @media screen and (max-width: 782px) {
-    .eventoDefault{
-      min-height: calc(65vh - 0px);
+    
+  header.eventoPage{
+    min-height: calc(78vh - 1px);
+    background-position-x: 34%;
+  }
+
+  header.contactoPage{
+    min-height: calc(78vh - 1px);
+    background-position-x: 80%;
+  }
+  header.eventoDefault{
+    min-height: calc(78vh - 1px);
   }
 
   .eventoDefault h1{
     font-size: 8vw;
     box-shadow: 0px 12px 0px -1px rgba(255,102,103,0.81)
   }
+
+  .title{
+    font-size: 6vw;
+  }
+  
   }
 
-  .div-card{
+  .div-card-home{
     max-width:100%;
     max-height: 1000px;
     width:100%;
     margin:20px auto;
     padding:0;
-    /*Flexbox setup*/
-    display: inline-flex;
+    display: flex;
     justify-content: center;
   }
 
-  .card{
+  
+  /* CARTAS */
+  .div-card-events{
+    display: table;
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  
+  .card{   
     float: left;
+    margin: auto;
     width: 250px;
     height: 350px;
-    margin-top: 50px;
+    margin-top: 25px;
     text-align: center;
-    margin-left: 30px;
+    margin-right: 30px;
     box-shadow: 0 3px 3px 0.9px rgba(0, 0, 0, 0.2);
     /* ANIMACIÓN */
     background-image: linear-gradient(to bottom, var(--mainRed)2%, var(--mainBlack)98%);
@@ -224,12 +284,12 @@
   -webkit-transition:-webkit-filter 1s;
 }
 
-.card:hover{
+.card:hover, .card:active{
     cursor: pointer;
     background-position: 0 -100%;
 }
 
-.card:hover img{
+.card:hover img, .card:active img{
   filter: grayscale(0);
   -webkit-filter: grayscale(0);
 }
@@ -238,11 +298,196 @@
 
 .card{
   display: block;
-
+  margin-right: 15px;
 }
-.div-card{
+
+.div-card-home, .div-card-events{
   display: table;
   width: 25%;
   text-align: center;
 }
 }
+
+/*  FIN CARTAS */
+
+
+/* SoundCloud */
+.soundcloud-home{
+  padding-top: 20px;
+  margin: auto;
+  width: 300px;
+}
+
+.widgetSC{
+  margin-top: 20px;
+}
+
+/*  FIN SoundCloud */
+
+/* FOOTER */
+footer{
+    margin-top: 52px;
+    background: black;
+    color: white;
+    text-align: center;
+    font-size: 10px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    height: 150px;
+    width:100%;
+    position: static;
+    left: 0;
+    bottom:0; 
+    display: flex;
+}
+
+.social{
+  list-style: none;
+  padding-bottom: 5px;
+}
+
+.social li{
+  display: inline;    
+  padding: 5px 30px; 
+  color: white;
+  cursor: pointer;
+}
+
+.instagram, .twitter, .facebook{
+  width: 30px;
+  height: 30px;
+  transition: var(--mainTransition);
+}
+
+#h3Footer{
+  font-size: 10px;
+  margin: 0 auto;
+}
+ 
+#pFooter{
+  margin-bottom: 0;
+}
+
+.stefano{
+  color: #FF6667;
+}
+
+.stefano:hover, .stefano:active{
+  color: white;
+}
+
+/* FIN FOOTER */
+
+/* F I N  H O M E */
+
+
+/* E V E N T O */
+
+.eventoPage{
+  min-height: calc(100vh - 66px);
+  background: url("https://scontent.ftuc1-2.fna.fbcdn.net/v/t1.0-0/p640x640/53691270_828066327538177_5143837534463197184_o.jpg?_nc_cat=102&_nc_oc=AQntr8DjUXcURdYbYtqMMBzoSk7aVwnx8trpgAgiTZKUrWGQlirstfp8zLkxVykAoZY&_nc_ht=scontent.ftuc1-2.fna&oh=6a4a3c4d33214a27b4fcfbd40af4a439&oe=5EA99930") center/cover ;
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+}
+
+/* F I N   E V E N T O */
+
+
+/* A R T I S T A S */
+
+.artistasPage{
+  min-height: calc(100vh - 66px);
+  background: url("https://scontent.ftuc1-1.fna.fbcdn.net/v/t1.0-9/s960x960/71909391_961477800863695_8894275914465017856_o.jpg?_nc_cat=104&_nc_oc=AQkKtHvoquQOHg9UjfgutqWa-dEGyIacHnhSFqCqpQmxtBhwdX9ia10t2W8FVTARLZc&_nc_ht=scontent.ftuc1-1.fna&oh=b8630e00e2cfee77682059bb7b304da8&oe=5E6D8146") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+}
+
+/* F I N   A R T I S T A S */
+
+/* C O N T A C T O */
+
+  .contactoPage{
+    min-height: calc(100vh - 66px);
+    background: url("https://scontent.ftuc1-2.fna.fbcdn.net/v/t1.0-9/s960x960/72377237_961472120864263_1964672342185476096_o.jpg?_nc_cat=102&_nc_oc=AQkTqBKdJn1usjnHEKBYniEjxdkTFVaHwYDcmi8n7uxS7IG4IFzbMJWAlZdUk-q_1No&_nc_ht=scontent.ftuc1-2.fna&oh=aca44ade31198b9d7099236138a54ae7&oe=5E77CE8B") center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-position-x: left;
+  }
+
+  .container-form{
+    height: 500px;
+    border-radius: 50px;
+    margin: auto;
+    margin-top: 30px;
+    padding: 0 15px;
+  }
+
+  .background-form{
+    float: right;
+    border-radius: 50px;
+    width: 800px;
+    margin: auto;
+    height: 500px;
+    background:url("https://scontent.ftuc1-2.fna.fbcdn.net/v/t1.0-0/p640x640/73495170_961476474197161_61866624486998016_o.jpg?_nc_cat=102&_nc_oc=AQk6c3a1_FD4ys4gWVBaCsUAlfAWHtQ0r9DWvwLNlhsenPZh-UxnYTweXYTF0OrPXBA&_nc_ht=scontent.ftuc1-2.fna&oh=bb2b96da67966ad816a0a3201ed079b6&oe=5E684443") center/cover no-repeat;
+    align-items: center;
+  }
+
+  .form-control{
+    border-radius: 500px;
+  }
+
+  .form-title{
+    font-weight: 700px;
+    color: var(--mainRed);
+  }
+  .form-name, .form-inputs{
+    margin-top: 30px;
+    height: 50px;
+    background-color: black;
+    border-radius: 50px;
+    color: white;
+    border: 1px solid rgba(114, 114, 114, 0.842);
+    text-align: center;
+    font-weight: 500;
+    width: 500px;
+  }
+
+  .form-inputs{
+    margin-top: 0px;
+  }
+
+  .form-textarea{
+    background-color: black;
+    resize: none;
+    border-radius: 50px;
+    text-align: center;
+    color: white;
+    padding: 30px;
+  }
+
+  .btn-form{
+    width: 180px;
+    height: 52px;
+    border-radius: 50px;
+    text-align: center;
+    border: none;
+    color: rgb(29, 31, 25);
+    background: white;
+    border: 1px solid rgb(30, 31, 25);
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    cursor: pointer; 
+    transition: var(--mainTransition);
+  }
+
+  .btn-form:hover, .btn-form:active{
+    background: rgb(237, 106, 90);
+    border: 1px solid rgb(237, 106, 90);
+    color: white;
+  }
+  
+  /*  F I N  C O N T A C T O */
