--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -164,7 +164,7 @@
   }
 
   .eventoDefault h1{
-    font-family: Source Sans Pro;
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: 700;
     color: rgb(255, 255, 255);
     letter-spacing: 8px;
@@ -176,7 +176,7 @@
   }
   
   .title{
-    font-family: Source Sans Pro;
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: 700;
     color: white;
     letter-spacing: 8px;
@@ -193,7 +193,7 @@
   .EventoDiv a{
     margin-right: 20px;
     margin-top: 25px;
-    font-family: Source Sans Pro;
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: 400;
     font-size: 30px;
     box-shadow: 0 3px 3px 0.9px rgba(0, 0, 0, 0.2);
@@ -248,6 +248,7 @@
 
   /* CARTAS */
   .div-card-events{
+    padding-bottom: 52px;
     display: table;
     margin: 0 auto;
     width: 90%;
@@ -297,8 +298,7 @@
 .card{
   display: block;
   margin-right: 15px;
-  height: 355px;
-
+  height: 362px;
 }
 
 .card img{
@@ -318,6 +318,7 @@
 /* SoundCloud */
 .soundcloud-home{
   padding-top: 20px;
+  padding-bottom: 52px;
   margin: auto;
   width: 300px;
 }
@@ -330,7 +331,6 @@
 
 /* FOOTER */
 footer{
-    margin-top: 52px;
     background: black;
     color: white;
     text-align: center;
@@ -348,13 +348,13 @@ footer{
 
 .social li{
   margin: auto;
-  display: inline;    
+  display: inline-flex;    
   padding: 5px 30px; 
   color: white;
-  cursor: pointer;
 }
 
-.instagram, .twitter, .facebook{
+.instagram, .twitter, .facebook, .spotify, .soundcloud{
+  cursor: pointer;
   width: 30px;
   height: 30px;
   transition: var(--mainTransition);
@@ -411,6 +411,9 @@ footer{
 
 /* C O N T A C T O */
 
+  .container-form{
+    margin-bottom: 500px;
+  }
   .contactoPage{
     min-height: calc(100vh - 66px);
     background: url("https://scontent.ftuc1-2.fna.fbcdn.net/v/t1.0-9/s960x960/72377237_961472120864263_1964672342185476096_o.jpg?_nc_cat=102&_nc_oc=AQkTqBKdJn1usjnHEKBYniEjxdkTFVaHwYDcmi8n7uxS7IG4IFzbMJWAlZdUk-q_1No&_nc_ht=scontent.ftuc1-2.fna&oh=aca44ade31198b9d7099236138a54ae7&oe=5E77CE8B") center/cover no-repeat;
@@ -419,13 +422,12 @@ footer{
     justify-content: center;
     background-position-x: left;
   }
-
   .container-form{
+    padding-bottom: 52px;
     height: 500px;
     border-radius: 50px;
     margin: auto;
     margin-top: 30px;
-    padding: 0 15px;
   }
 
   .background-form{
@@ -494,3 +496,372 @@ footer{
   }
   
   /*  F I N  C O N T A C T O */
+
+
+  /* A R T I S T A  X */
+
+  .banner-ArtistaX{
+    width: 50%;
+    height: calc(100vh - 66px);
+  }
+
+  .background-ArtistaX{
+    width: 50%;
+    height: calc(100vh - 66px);
+    background-color: black;
+    float: right;
+  }
+
+  .title-ArtistaX{
+    color: white;
+    font-size: 50px;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 800;
+    letter-spacing: 2px;
+    margin-top: 50px;
+    margin-left: 50px;
+    text-align: center;
+    align-items: center;
+    margin-right: 0px;
+    width: auto;
+    height: 150px;
+  }
+
+  .residentTitle{
+    font-size: 15px;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 600;
+    letter-spacing: 2px;
+    color: var(--mainRed);
+    height: 50px;
+    width: 100px;
+    margin-left: 10px;
+    margin-top: 77px;
+    text-align: end;
+  }
+
+  .titleAndSubtitle{
+    display: flex;
+    margin: auto;
+    height: 150px;
+    transition: var(--mainTransition);
+  }
+
+  .titleAndSubtitle:hover, .titleAndSubtitle:active{
+    background-color: rgba(255, 0, 0, 0.212);
+    transition: var(--mainTransition);
+  }
+
+  .biografia-ArtistaX{
+    width: 500px;
+    text-align: center;
+    font-family: "Source Sans Pro", sans-serif;
+  }
+
+  .SoundCloud-ArtistaX{
+    position: absolute;
+    width: 40%;
+    margin-left: 15px;
+    bottom: 0;
+  }
+
+
+  .SocialNetworks-ArtistaX{
+    display: flex;
+    justify-content: space-around
+  }
+
+  .social-ArtistaX li{
+    display: inline-flex;
+    padding: 5px 10px;
+  }
+
+  @media (min-width: 320px) and (max-width: 480px) {
+    
+    .instagram, .twitter, .facebook, .spotify, .soundcloud{
+      width: 20px;
+      height: 20px;
+    }
+    .banner-ArtistaX{
+      min-height: calc(80vh - 1px);
+    }
+
+    .title-ArtistaX{
+      display: inline-block;
+      margin: 0;
+      font-size: 6vw;
+      width: 100%;
+      height: 30px;
+    }
+  
+    .residentTitle{
+      font-size: 1rem;
+      text-align: center;
+      width: auto;
+      margin: 0;
+    }
+
+    .titleAndSubtitle{
+      margin-top: 30px;
+      display: inline-block;
+      height: 70px;
+      width: 100%;
+    }
+
+    .biografia-ArtistaX{
+      margin: auto;
+      font-size: 2vh;
+      width: 80%;
+      text-align: center;
+      font-family: "Source Sans Pro", sans-serif;
+    }
+  
+    .SocialNetworks-ArtistaX{
+      text-align: center;
+      display: flex;
+      margin: 0 auto;
+    }
+
+    .social-ArtistaX li{
+      margin: auto;
+      display: inline-flex;    
+      padding: 5px 5px; 
+    }
+  }
+
+  @media (min-width: 481px) and (max-width: 767px) {
+  
+    .title-ArtistaX{
+      display: inline-block;
+      margin: 0;
+      font-size: 6vw;
+      width: 100%;
+      height: 50px;
+    }
+  
+    .residentTitle{
+      font-size: 1rem;
+      margin-top: 50px;
+      text-align: center;
+      width: auto;
+      margin: 0;
+    }
+
+    .titleAndSubtitle{
+      margin-top: 30px;
+      display: inline-block;
+      height: 80px;
+      width: 100%;
+    }
+
+    .biografia-ArtistaX{
+      margin: auto;
+      margin-bottom: 30px;
+      font-size: 2.4vh;
+      width: 80%;
+      text-align: center;
+      font-family: "Source Sans Pro", sans-serif;
+    }
+  
+    .SocialNetworks-ArtistaX{
+      display: flex;
+      margin: 0 auto;
+    }
+
+    .social-ArtistaX li{
+      margin: auto;
+      display: inline-flex;
+    }
+  }
+
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  
+    .title-ArtistaX{
+      display: inline-block;
+      margin: 0;
+      font-size: 6vw;
+      width: 100%;
+      height: 50px;
+      margin-bottom: 10px;
+
+    }
+  
+    .residentTitle{
+      font-size: 1rem;
+      text-align: center;
+      width: auto;
+      margin: 0;
+    }
+
+    .titleAndSubtitle{
+      margin-top: 30px;
+      margin-bottom: 20px;
+      display: inline-block;
+      height: 80px;
+      width: 100%;
+    }
+
+    .biografia-ArtistaX{
+      margin: auto;
+      margin-bottom: 30px;
+      font-size: 2.4vh;
+      width: 80%;
+      text-align: center;
+      font-family: "Source Sans Pro", sans-serif;
+    }
+  
+    .SocialNetworks-ArtistaX{
+      display: flex;
+      margin: 0 auto;
+    }
+
+    .social-ArtistaX li{
+      margin: auto;
+      display: inline-flex;
+    }
+    
+  }
+
+  @media (min-width: 1025px) and (max-width: 1280px) {
+  
+    .banner-ArtistaX{
+      width: 50%;
+      height: calc(100vh - 66px);
+    }
+  
+    .background-ArtistaX{
+      width: 50%;
+      height: calc(100vh - 66px);
+      background-color: black;
+      float: right;
+    }
+  
+    .title-ArtistaX{
+      color: white;
+      font-size: 50px;
+      font-family: "Source Sans Pro", sans-serif;
+      font-weight: 800;
+      letter-spacing: 2px;
+      margin-top: 50px;
+      margin-left: 50px;
+      text-align: center;
+      align-items: center;
+      margin-right: 0px;
+      width: auto;
+      height: 150px;
+    }
+  
+    .residentTitle{
+      font-size: 15px;
+      font-family: "Source Sans Pro", sans-serif;
+      font-weight: 600;
+      letter-spacing: 2px;
+      color: var(--mainRed);
+      height: 50px;
+      width: 100px;
+      margin-left: 10px;
+      margin-top: 77px;
+      text-align: end;
+    }
+  
+    .titleAndSubtitle{
+      display: flex;
+      margin: auto;
+      height: 150px;
+      transition: var(--mainTransition);
+    }
+  
+    .titleAndSubtitle:hover, .titleAndSubtitle:active{
+      background-color: rgba(255, 0, 0, 0.212);
+      transition: var(--mainTransition);
+    }
+  
+    .biografia-ArtistaX{
+      width: 500px;
+      text-align: center;
+      font-family: "Source Sans Pro", sans-serif;
+    }
+
+    .SocialNetworks-ArtistaX{
+      display: flex;
+      margin-right: 80px;
+
+    }
+
+    .social-ArtistaX li{
+      display: inline-flex;
+    }
+  }
+
+  @media (min-width: 1281px) {
+  
+    .banner-ArtistaX{
+      width: 50%;
+      height: calc(100vh - 66px);
+    }
+  
+    .background-ArtistaX{
+      width: 50%;
+      height: calc(100vh - 66px);
+      background-color: black;
+      float: right;
+    }
+  
+    .title-ArtistaX{
+      color: white;
+      font-size: 50px;
+      font-family: "Source Sans Pro", sans-serif;
+      font-weight: 800;
+      letter-spacing: 2px;
+      margin-top: 50px;
+      margin-left: 50px;
+      text-align: center;
+      align-items: center;
+      margin-right: 0px;
+      width: auto;
+      height: 150px;
+    }
+  
+    .residentTitle{
+      font-size: 15px;
+      font-family: "Source Sans Pro", sans-serif;
+      font-weight: 600;
+      letter-spacing: 2px;
+      color: var(--mainRed);
+      height: 50px;
+      width: 100px;
+      margin-left: 10px;
+      margin-top: 77px;
+      text-align: end;
+    }
+  
+    .titleAndSubtitle{
+      display: flex;
+      margin: auto;
+      height: 150px;
+      transition: var(--mainTransition);
+    }
+  
+    .titleAndSubtitle:hover, .titleAndSubtitle:active{
+      background-color: rgba(255, 0, 0, 0.212);
+      transition: var(--mainTransition);
+    }
+  
+    .biografia-ArtistaX{
+      width: 500px;
+      text-align: center;
+      font-family: "Source Sans Pro", sans-serif;
+    }
+
+    .SocialNetworks-ArtistaX{
+      margin-top: 40px;
+      display: flex;
+      width: 70%;
+    }
+
+    .social-ArtistaX li{
+      display: inline-flex;
+    }
+    
+  }
+  /*  F I N  A R T I S T A  X */
