--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,7 @@
 }
 
 .body {
-  background: url("https://firebasestorage.googleapis.com/v0/b/andproducciones-b1b01.appspot.com/o/fondo.jpg?alt=media&token=bc60cda5-d1a0-4eb7-b90b-25880ad31234");
+  background: black;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.4;
 }
